tests/baselines/reference/unusedImports12.errors.txt
tests/cases/compiler/a.ts(1,10): error TS6133: 'Member' is declared but never used.
tests/cases/compiler/a.ts(2,8): error TS6133: 'd' is declared but never used.
tests/cases/compiler/a.ts(2,23): error TS6133: 'M' is declared but never used.
tests/cases/compiler/a.ts(3,13): error TS6133: 'ns' is declared but never used.
tests/cases/compiler/a.ts(4,8): error TS6133: 'r' is declared but never used.


==== tests/cases/compiler/a.ts (5 errors) ====
    import { Member } from './b';
             ~~~~~~
!!! error TS6133: 'Member' is declared but never used.
    import d, { Member as M } from './b';
           ~
!!! error TS6133: 'd' is declared but never used.
                          ~
!!! error TS6133: 'M' is declared but never used.
    import * as ns from './b';
                ~~
!!! error TS6133: 'ns' is declared but never used.
    import r = require("./b");
           ~
!!! error TS6133: 'r' is declared but never used.
    
==== tests/cases/compiler/b.ts (0 errors) ====
    export class Member {}
    export default Member;
    
    